[project]
version = "0.26.1"
name = "tttrlib"
requires-python = ">=3.9"
description = "Read, write & process time-tagged time-resolved (TTTR) data."
readme = "README.md"
authors = [{ name = "Thomas-Otavio Peulen", email = "thomas.otavio.peulen@gmail.com" }]
license = "BSD-3-Clause"

keywords = [
    "fluorescence",
    "time-resolved",
    "spectroscopy",
    "imaging",
    "microscopy"
]

classifiers = [
    "Topic :: Software Development",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "h5py",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "scikit-image",
    "click",
    "click-didyoumean",
    "tqdm",
]

[project.urls]
homepage = "https://github.com/fluorescence-tools/tttrlib"
documentation = "https://docs.peulen.xyz/tttrlib"
repository = "https://github.com/fluorescence-tools/tttrlib.git"

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "cmake",
    "ninja",
    # Build against NumPy 2.x headers so wheels are compatible with both
    # NumPy 1.x and 2.x at runtime.
    "numpy>=2.0",
    # Provide SWIG binary via PyPI wheels.
    "swig<4.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Install the compiled extension + generated wrapper into the package dir.
wheel.install-dir = "tttrlib"
# Include the pure-Python package sources from src/.
wheel.packages = ["src/tttrlib"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_INTERFACE = "ON"
BUILD_PYTHON_DOCS = "OFF"
BUILD_LIBRARY = "OFF"
BUILD_R_INTERFACE = "OFF"
BUILD_PHOTON_HDF = "ON"
WITH_AVX = "OFF"
TTTRLIB_WHEEL_BUILD = "ON"

[tool.cibuildwheel]
build-verbosity = 2
# Skip: PyPy, 32-bit, musllinux, Python 3.14+
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*", "cp314-*", "cp314t-*"]
test-command = "python -c \"import tttrlib; d = tttrlib.TTTR(); print(type(d).__name__)\""

[tool.cibuildwheel.macos]
# Build only for x86_64 (native arch on macos-13 runner)
# arm64 cross-compilation requires additional setup
archs = ["x86_64"]
before-all = [
    "brew install cmake hdf5",
]
before-build = "pip install delocate"
# delocate automatically bundles HDF5 libraries
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "13.0"
CMAKE_PREFIX_PATH = "/usr/local"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
before-all = [
    "dnf install -y cmake hdf5-devel"
]
repair-wheel-command = "auditwheel repair --plat manylinux_2_28_x86_64 -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "vcpkg install hdf5:x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "python -m delvewheel repair --add-path C:/vcpkg/installed/x64-windows/bin -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
# Use Visual Studio generator instead of Ninja
CMAKE_GENERATOR = "Visual Studio 17 2022"

# Help CMake find Python in the cibuildwheel environment
Python3_EXECUTABLE = "$PYTHON"
Python3_ROOT_DIR = "$PYTHON_PREFIX"

# Help CMake find HDF5
CMAKE_PREFIX_PATH = "C:/vcpkg/installed/x64-windows"
