[project]
version = "0.26.0"
name = "tttrlib"
requires-python = ">=3.9"
description = "Read, write & process time-tagged time-resolved (TTTR) data."
readme = "README.md"
authors = [{ name = "Thomas-Otavio Peulen", email = "thomas.otavio.peulen@gmail.com" }]
license = { text = "BSD-3-Clause" }

keywords = [
    "fluorescence",
    "time-resolved",
    "spectroscopy",
    "imaging",
    "microscopy"
]

classifiers = [
    "Topic :: Software Development",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
    "pooch>=1.8.0",
]
examples = [
    "matplotlib",
    "scikit-image",
    "click",
    "click-didyoumean",
    "tqdm",
]

[project.urls]
homepage = "https://github.com/fluorescence-tools/tttrlib"
documentation = "https://docs.peulen.xyz/tttrlib"
repository = "https://github.com/fluorescence-tools/tttrlib.git"

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "numpy",
    "swig<4.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.13"
cmake.args = [
    "-DBUILD_PYTHON_DOCS:BOOL=OFF",
    "-DBUILD_PYTHON_INTERFACE:BOOL=ON",
    "-DWITH_AVX:BOOL=OFF",
    "-DBUILD_R_INTERFACE:BOOL=OFF",
    "-DCMAKE_BUILD_TYPE=Release",
    "-DBUILD_PHOTON_HDF:BOOL=ON",
    "-DBUILD_LIBRARY:BOOL=OFF",
    "-DCMAKE_C_VISIBILITY_PRESET=hidden",
    "-DCMAKE_CXX_VISIBILITY_PRESET=hidden",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
    "-DCMAKE_INSTALL_LIBDIR:STRING=tttrlib",
]
wheel.packages = ["tttrlib"]
# wheel.py-api = "py3"
build-dir = "build/{wheel_tag}"
install.strip = true
install.components = ["bindings"]

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"
version.write-to = "tttrlib/_version.py"

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = ["examples", "doc", "build", "dist", ".git", "thirdparty"]
qt_api = "pyqt5"
markers = ["integration: marks tests as integration tests requiring external resources"]

[tool.cibuildwheel]
build-verbosity = 2
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*", "cp314-*", "cp314t-*", "cp313t-*"]
test-skip = "*"
#test-command = "python -c \"import tttrlib; d = tttrlib.TTTR(); print(type(d).__name__)\""

[tool.cibuildwheel.macos]
archs = ["universal2"]
before-all = [
    "brew install hdf5 || brew upgrade hdf5 || true",
]
before-build = "pip install delocate"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.macos.environment]
CMAKE_PREFIX_PATH = "$(brew --prefix hdf5)"
CMAKE_INSTALL_RPATH = "@loader_path"
SKBUILD = "1"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
before-all = [
    "dnf install -y epel-release --nogpgcheck && dnf install -y --enablerepo=powertools --nogpgcheck cmake hdf5-devel && rm -f /usr/local/bin/swig*",
]
repair-wheel-command = "auditwheel repair --plat manylinux_2_28_x86_64 -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
CMAKE_INSTALL_RPATH = "$ORIGIN"
CMAKE_PREFIX_PATH = "/usr"
SKBUILD = "1"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "pip install delvewheel"
# --add-libcxx is macOS only; Windows doesn't need it
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
CMAKE_GENERATOR = "Visual Studio 17 2022"
Python3_EXECUTABLE = "$PYTHON"
Python3_ROOT_DIR = "$PYTHON_PREFIX"
CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreadedDLL"
# Don't use vcpkg.cmake toolchain - it has path escaping issues on Windows
# HDF5_ROOT and CMAKE_PREFIX_PATH are sufficient for CMake to find HDF5
HDF5_ROOT = "$HDF5_ROOT"
CMAKE_PREFIX_PATH = "$CMAKE_PREFIX_PATH"
SKBUILD = "1"
