[metadata]
name = tttrlib
description = tttrlib read/process/write TTTR data.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas-Otavio Peulen
author_email = thomas.otavio.peulen@gmail.com
license = LGPL
platforms = any
url = https://github.com/fluorescence-tools/tttrlib
project_urls =
    Tracker = https://github.com/fluorescence-tools/tttrlib/issues
    Documentation = https://docs.peulen.xyz/tttrlib
    Source = https://github.com/fluorescence-tools/tttrlib

keywords =
    fluorescence
    time-resolved
    spectroscopy
    imaging
    microscopy

classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Framework :: Robot Framework
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    numpy
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension
    boost
    swig

[options.packages.find]
where = src

