cmake_policy(SET CMP0078 NEW)
cmake_policy(SET CMP0086 NEW)
cmake_policy(SET CMP0094 NEW)
# Use FindPython3 instead of FindPython for better Python 3.13 support
if(POLICY CMP0148)
    cmake_policy(SET CMP0148 NEW)
endif()


SET(MODULE_NAME ${PROJECT_NAME})

FIND_PACKAGE(SWIG REQUIRED)
MESSAGE(STATUS "SWIG_EXECUTABLE: ${SWIG_EXECUTABLE}")
MESSAGE(STATUS "SWIG_VERSION: ${SWIG_VERSION}")
INCLUDE(${SWIG_USE_FILE})
INCLUDE_DIRECTORIES(.)

IF(BUILD_PYTHON_INTERFACE)

    IF(BUILD_PYTHON_DOCS)
        # Doxygen: To create the python interface documentation
        FIND_PACKAGE(Doxygen REQUIRED)
        MESSAGE(STATUS "Building documentation for Python interface")
        MESSAGE(STATUS "Doxygen executable " ${DOXYGEN_EXECUTABLE})
        #This will be the main output of our command
        execute_process(COMMAND ${DOXYGEN_EXECUTABLE} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/doc OUTPUT_QUIET)
        execute_process(
                COMMAND python ${CMAKE_SOURCE_DIR}/tools/doxy2swig.py ${CMAKE_SOURCE_DIR}/doc/_build/xml/index.xml ${CMAKE_SOURCE_DIR}/ext/documentation.i
                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    ENDIF()

    MESSAGE(STATUS "Building Python interface")
    
    # Use Python3 explicitly for better compatibility with Python 3.13+
    FIND_PACKAGE(Python3 REQUIRED COMPONENTS Interpreter Development.Module NumPy)
    
    # Debug output
    MESSAGE(STATUS "Python3_FOUND: ${Python3_FOUND}")
    MESSAGE(STATUS "Python3_VERSION: ${Python3_VERSION}")
    MESSAGE(STATUS "Python3_EXECUTABLE: ${Python3_EXECUTABLE}")
    MESSAGE(STATUS "Python3_INCLUDE_DIRS: ${Python3_INCLUDE_DIRS}")
    MESSAGE(STATUS "Python3_NumPy_INCLUDE_DIRS: ${Python3_NumPy_INCLUDE_DIRS}")
    
    INCLUDE_DIRECTORIES(BEFORE ${Python3_NumPy_INCLUDE_DIRS} ${Python3_INCLUDE_DIRS})
    LINK_LIBRARIES(Python3::Module Python3::NumPy)

    # Handle where to install the resulting Python package
    if(CALL_FROM_SETUP_PY)
        # The CMakeExtension will set CMAKE_INSTALL_PREFIX to the root
        # of the resulting wheel archive
        SET(MODULE_NAME ${PROJECT_NAME})
        set(MY_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
    else()
        # The Python package is installed directly in the folder of the
        # detected interpreter (system, user, or virtualenv)
        set(MY_INSTALL_PREFIX ${Python3_SITELIB})
    endif()
    SET_SOURCE_FILES_PROPERTIES(python/tttrlib.i PROPERTIES CPLUSPLUS ON SWIG_MODULE_NAME ${PROJECT_NAME})

    # Ensure SWIG reruns when any of the included interface or helper Python files change.
    file(GLOB SWIG_INTERFACE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/*.i")
    list(REMOVE_ITEM SWIG_INTERFACE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/python/tttrlib.i")
    file(GLOB SWIG_PYTHON_HELPERS
            "${CMAKE_CURRENT_SOURCE_DIR}/python/*.py"
    )
    # Exclude the generated wrapper (lives in the build directory, not the source tree)
    list(FILTER SWIG_PYTHON_HELPERS EXCLUDE REGEX ".*/tttrlib.py$")

    set(SWIG_DEPENDENCIES "${SWIG_INTERFACE_FILES};${SWIG_PYTHON_HELPERS}")
    if(SWIG_DEPENDENCIES)
        list(REMOVE_DUPLICATES SWIG_DEPENDENCIES)
        set_property(SOURCE python/tttrlib.i PROPERTY SWIG_MODULE_DEPENDS "${SWIG_DEPENDENCIES}")
    endif()

    # Fix file path on Windows systems
    FILE(TO_CMAKE_PATH "${CMAKE_SWIG_OUTDIR}" CMAKE_SWIG_OUTDIR)
    MESSAGE(STATUS "CMAKE_SWIG_OUTDIR: '${CMAKE_SWIG_OUTDIR}'")
    MESSAGE(STATUS "SWIG_SUPPORT_FILES_DIRECTORY: '${SWIG_SUPPORT_FILES_DIRECTORY}'")
    MESSAGE(STATUS "MY_INSTALL_PREFIX: '${MY_INSTALL_PREFIX}'")
    SWIG_ADD_LIBRARY(
            ${MODULE_NAME}
            TYPE MODULE
            LANGUAGE python
            SOURCES python/tttrlib.i ${SRC_files}
    )
    TARGET_LINK_LIBRARIES(
            ${MODULE_NAME}
            Python3::Module
            ${CMAKE_THREAD_LIBS_INIT}
            Boost::locale
    )
    # On macOS, use dynamic lookup for Python symbols
    IF (APPLE)
        SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES LINK_FLAGS "-Wl,-flat_namespace,-undefined,dynamic_lookup")
    ENDIF()

    # =======
    # Install
    # =======
    # Get the autogenerated Python file
    get_property(WRAPPER_PY_FILE
            TARGET ${MODULE_NAME}
            PROPERTY SWIG_SUPPORT_FILES)

    # Install the autogenerated Python file
    INSTALL(FILES ${WRAPPER_PY_FILE}
            DESTINATION ${MY_INSTALL_PREFIX}
            COMPONENT bindings)

    # Provide a lightweight target to regenerate only the SWIG-generated Python wrapper.
    add_custom_target(${MODULE_NAME}_python_wrapper
            DEPENDS ${WRAPPER_PY_FILE}
            COMMENT "Regenerate SWIG-generated Python wrapper ${WRAPPER_PY_FILE}")

    # Backward compatible alias so users can run: cmake --build <build-dir> --target python_wrapper
    if(NOT TARGET python_wrapper)
        add_custom_target(python_wrapper
                DEPENDS ${MODULE_NAME}_python_wrapper)
    endif()

    # Install the SWIG library
    INSTALL(TARGETS ${MODULE_NAME}
            COMPONENT bindings
            LIBRARY DESTINATION ${MY_INSTALL_PREFIX}
            ARCHIVE DESTINATION ${MY_INSTALL_PREFIX}
            RUNTIME DESTINATION ${MY_INSTALL_PREFIX}
    )

ENDIF(BUILD_PYTHON_INTERFACE)

IF(BUILD_R_INTERFACE)
    MESSAGE(STATUS "Building R interface")
    MESSAGE("!!!WARNING THE R INTERFACE IS NOT IMPLEMENTED!!!")
    FIND_PACKAGE(R REQUIRED)
    INCLUDE_DIRECTORIES(${R_INCLUDE_DIR})
    INCLUDE(${SWIG_USE_FILE})
    SWIG_ADD_LIBRARY(
            ${MODULE_NAME}
            LANGUAGE r
            SOURCES python/tttrlib.i ${SRC_files}
    )
    TARGET_LINK_LIBRARIES(
            ${MODULE_NAME}
            ${HDF5_LIBRARIES}
            ${R_LIBRARIES}
            ${CMAKE_THREAD_LIBS_INIT}
            ${Boost_LIBRARIES}
            OpenMP::OpenMP_CXX
    )
ENDIF()

